Adding hover effect to button element

--- a/style.css
+++ b/style.css
@@ -58,3 +58,9 @@ h3{
     font-family: var(--fonte-family);
     font-weight: bolder;
 }
+
+.btn-jogar:hover{
+    transform: scale(1.1);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: 1s;
+}
